Changes for 1.1.3:

 - better processing of units 's', support for units 'uptime' (Alexei)
 - fixed data.sql to set correct item type UIN64 where required (Alexei)
 - fixed data.sql to get rid of zero multipliers (Alexei)
 - fixed problem when adding a graph under PostgreSQL (Alexei)
 - new algorithm for housekeeping same for all DB engines (Alexei)
 - fixed calculation of delta(#N) (Alexei)
 - always draw graphs for items having type "trapper" (Alexei)
 - added Swedish translation. Thanks to "yeager". (Alexei)
 - support of system.swap.size[,pfree] and system.swap.size[,pused] (Alexei)
 - better calculation of next check timestamp for active items (Alexei)
 - fixed situations when latest_alarm() may return wrong value (Alexei)
 - remove left spaces from script full path (Alexei)
 - fixed Most Busy trigger report for multi-item triggers (Alexei)
 - fixed possible security issues raised by debian security audit (Alexei)
 - changed all zabbix_log(lev, str) to zabbix_log(lev,"%s", str) (Alexei)
 - introduced secure strcat and strcpy: zbx_strlcat, zbx_strlcpy (Alexei)
 - better format for Queue report (Alexei) 
 - fixed perofmance problem in Status of Triggers (Alexei)
 - history stats removed from Status of ZABBIX report (Alexei)
 - fixed assignment of default listen port for Win agent (Eugene)
 - changed return value for 'net.tcp.port[]' of Win agent (Eugene)
 - added images for postgres (Eugene)
 - fixed reversed icons on maps (Eugene)
 - fixed trigger description substitution in action comporation (Eugene) 
 - fixed trigger description substitution in message subject and body (Eugene) 
 
Changes for 1.1.2:

 - fixed storage and calculation of i64 values (Eugene) 
 - added color selection for trigger severity 'warning' and 'information' (Eugene)
 - fixed limitation of return value for 'net.if.*' (Eugene)
 - fixed limitation of return value for 'vfs.dev.*' (Eugene)
 - fixed limitation of return value for 'system.cpu.intr' (Eugene)